# santaxd-0--foodtracker-app

./: .gitignore  README.md
backend/: .gitignore  pyproject.toml
backend/app/: settings.py  urls.py
backend/app/jwt_token/: jwt_token_serializer.py  jwt_token_settings.py
backend/apps/auth/: apps.py  serializers.py  urls.py  views.py
desktop_ios/desktop_ios/: ContentView.swift  desktop_iosApp.swift
desktop_ios/desktop_ios.xcodeproj/: project.pbxproj
desktop_ios/desktop_iosTests/: desktop_iosTests.swift
desktop_ios/desktop_iosUITests/: desktop_iosUITests.swift  desktop_iosUITestsLaunchTests.swift
foodtracker-api-gateway/: package.json
foodtracker-api-gateway/src/: app.module.ts
foodtracker-auth-backend/: .dockerignore  Dockerfile  compose.yaml  pyproject.toml
foodtracker-auth-backend/app/: settings.py
foodtracker-auth-backend/apps/auth/: models.py  serializers.py  views.py
foodtracker-auth-backend/apps/auth/tests/: auth_tests.py
foodtracker-auth-backend/apps/auth/utils/jwt_token/: jwt_token_serializer.py  jwt_token_settings.py
foodtracker-auth-backend/apps/auth/utils/message/: auth_handler.py
foodtracker-auth-frontend/foodtracker-app/: package-lock.json  package.json
foodtracker-core-backend/: package-lock.json  package.json
foodtracker-core-backend/src/: app.controller.ts  app.module.ts  app.service.ts  main.ts
foodtracker-core-backend/test/: app.e2e-spec.ts
foodtracker-core-frontend/: package-lock.json  package.json
foodtracker-core-frontend/app/: page.tsx
frontend/foodtracker-app/: index.html  package-lock.json  package.json
(+80 files in other folders)
